Refactor API URL handling and add environment configuration for production and development

--- a/simple-api/appsettings.json
+++ b/simple-api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CorsOrigins": {
+    "AllowedOrigins": ["https://opulent-waffle-7pvprprj7rjhxqvj-4200.app.github.dev"]
+  }
 }
