Add Kubernetes secret for allowed origins and update API deployment to use it

--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -22,6 +22,11 @@ spec:
         env:
         - name: ASPNETCORE_ENVIRONMENT
           value: "Production"
+        - name: CorsOrigins__AllowedOrigins
+          valueFrom:
+            secretKeyRef:
+              name: allowed-origins
+              key: CorsOrigins__AllowedOrigins
 ---
 apiVersion: v1
 kind: Service
